--- a/yes.html
+++ b/yes.html
@@ -18,6 +18,12 @@
             <div class="bubble x8"></div>
             <div class="bubble x9"></div>
             <div class="bubble x10"></div>
+            <div class="bubble x11"></div>
+            <div class="bubble x12"></div>
+            <div class="bubble x13"></div>
+            <div class="bubble x14"></div>
+            <div class="bubble x15"></div>
+
 
         </div>
         <audio id="hannahmontana" src="./audio/hannah-montana-transicion-2_OJ4U7Tx.mp3" autoplay muted></audio>
