fixed database issue. was Post instead of POST

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             };
             try {
                 const response = await fetch('/.netlify/functions/submit-respo', {
-                    method: 'Post',
+                    method: 'POST',
                     headers: {
                         'Content-Type': 'application/json'
                     },
