--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             }
         }
         function nextPage() {
-            window.location.href = "yes.html";
+            window.location.href = "./yes.html";
         }
 
         function moveButton() {
